# soco

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  SECURITY.md  algorithms.md  example.tex  index.md  sources.bib
implementation/: Cargo.toml  pyproject.toml
implementation/src/: breakpoints.rs  config.rs  convert.rs  cost.rs  distance.rs  lib.rs  objective.rs  problem.rs  result.rs  schedule.rs  utils.rs  value.rs  vec_wrapper.rs  verifiers.rs
implementation/src/algorithms/: README.md  capacity_provisioning.rs  mod.rs
implementation/src/algorithms/offline/: graph_search.rs  mod.rs
implementation/src/algorithms/offline/multi_dimensional/: approx_graph_search.rs  graph_search.rs  optimal_graph_search.rs  static_fractional.rs  static_integral.rs
implementation/src/algorithms/offline/uni_dimensional/: capacity_provisioning.rs  mod.rs  optimal_graph_search.rs
implementation/src/algorithms/online/: mod.rs
implementation/src/algorithms/online/multi_dimensional/: mod.rs  online_gradient_descent.rs
implementation/src/algorithms/online/multi_dimensional/horizon_control/: averaging_fixed_horizon_control.rs  mod.rs
implementation/src/algorithms/online/multi_dimensional/lazy_budgeting/: mod.rs  smoothed_balanced_load_optimization.rs  smoothed_load_optimization.rs
implementation/src/algorithms/online/uni_dimensional/: lazy_capacity_provisioning.rs  memoryless.rs  mod.rs  probabilistic.rs  randomized.rs  randomly_biased_greedy.rs
implementation/src/bindings/data_center/: model.rs  offline.rs
implementation/src/model/: mod.rs
implementation/src/model/data_center/: loads.rs  mod.rs  model.rs
implementation/src/model/data_center/models/: delay.rs  energy_consumption.rs  energy_cost.rs  revenue_loss.rs  switching_cost.rs
implementation/src/numerics/: convex_optimization.rs  finite_differences.rs  roots.rs
implementation/src/numerics/quadrature/: mod.rs  piecewise.rs
implementation/src/streaming/: mod.rs  offline.rs  online.rs  utils.rs
implementation/tests/: factories.rs  tests.rs
implementation/tests/algorithms/offline/multi_dimensional/: approx_graph_search.rs  mod.rs  optimal_graph_search.rs
implementation/tests/algorithms/offline/uni_dimensional/: capacity_provisioning.rs  mod.rs  optimal_graph_search.rs
implementation/tests/algorithms/online/multi_dimensional/: mod.rs  online_gradient_descent.rs
implementation/tests/algorithms/online/uni_dimensional/: lazy_capacity_provisioning.rs  memoryless.rs  mod.rs  randomized.rs  randomly_biased_greedy.rs
implementation/tests/convert/: mod.rs
rsdc/: Cargo.toml
rsdc/src/: analysis.rs  convert.rs  lib.rs  online.rs  schedule.rs  sim.rs  utils.rs  verifiers.rs
rsdc/src/algorithms/: README.md  alg1.rs  bansal.rs  lcp.rs  mod.rs  opt.rs  rand.rs
rsdc/tests/: alg1.rs  lcp.rs  opt.rs
soco/: Cargo.toml  README.md
soco/src/: analysis.rs  breakpoints.rs  config.rs  convert.rs  convex_optimization.rs  cost.rs  distance.rs  lib.rs  norm.rs  objective.rs  online.rs  problem.rs  quadrature.rs  result.rs  schedule.rs  utils.rs  value.rs  vec_wrapper.rs  verifiers.rs
soco/src/algorithms/: README.md  bansal.rs  capacity_provisioning.rs  convex_optimization.rs  graph_search.rs  mod.rs  opt.rs  optimization.rs  rand.rs
soco/src/algorithms/bansal/: det.rs  irand.rs  memoryless.rs  mod.rs  rand.rs
soco/src/algorithms/lcp/: bounds.rs  elcp.rs  ilcp.rs  lcp.rs  mod.rs  past_opt.rs
soco/src/algorithms/offline/: graph_search.rs  iopt.rs  miopt.rs  mod.rs  opt.rs  opt_backward.rs
soco/src/algorithms/offline/multi_dimensional/: approx_graph_search.rs  convex_optimization.rs  graph_search.rs  mod.rs  optimal_graph_search.rs  static_integral.rs
soco/src/algorithms/offline/uni_dimensional/: capacity_provisioning.rs  optimal_graph_search.rs
soco/src/algorithms/online/: mod.rs  streaming.rs
soco/src/algorithms/online/multi_dimensional/: horizon_control.rs  mod.rs  online_gradient_descent.rs
soco/src/algorithms/online/uni_dimensional/: lazy_capacity_provisioning.rs  memoryless.rs  mod.rs  probabilistic.rs  randomized.rs  randomly_biased_greedy.rs
soco/src/algorithms/quedenfeld/: det.rs  idet.rs  mod.rs
soco/src/bindings/: mod.rs  model.rs  offline.rs  online.rs  utils.rs
soco/src/bindings/data_center/: mod.rs  model.rs  offline.rs
soco/src/bindings/data_center/online/: memoryless.rs  mod.rs  probabilistic.rs  randomized.rs  randomly_biased_greedy.rs
soco/src/cost/: mod.rs
soco/src/cost/data_center/: load.rs  loads.rs  loss.rs  mod.rs  model.rs
soco/src/cost/data_center/models/: delay.rs  energy_consumption.rs  energy_cost.rs  revenue_loss.rs  switching_cost.rs
soco/src/model/: mod.rs
soco/src/model/data_center/: loads.rs  mod.rs  model.rs
soco/src/model/data_center/models/: delay.rs  energy_consumption.rs  energy_cost.rs  mod.rs  revenue_loss.rs  switching_cost.rs
soco/src/numerics/: bisection.rs  convex_optimization.rs  finite_differences.rs  mod.rs  roots.rs
soco/src/numerics/quadrature/: mod.rs  piecewise.rs
soco/src/quadrature/: mod.rs  piecewise.rs
soco/src/streaming/: backend.rs  frontend.rs  mod.rs  offline.rs  online.rs  utils.rs
soco/tests/: factories.rs  lcp.rs  opt.rs  streaming.rs  tests.rs  utils.rs
soco/tests/algorithms/: mod.rs
soco/tests/algorithms/lcp/: ilcp.rs  lcp.rs  mod.rs
soco/tests/algorithms/offline/: iopt.rs  mod.rs  opt.rs  opt_backward.rs
soco/tests/algorithms/offline/multi_dimensional/: approx_graph_search.rs  convex_optimization.rs  mod.rs  optimal_graph_search.rs  static_fractional.rs  static_integral.rs
soco/tests/algorithms/offline/uni_dimensional/: capacity_provisioning.rs  mod.rs  optimal_graph_search.rs
soco/tests/algorithms/online/: mod.rs
soco/tests/algorithms/online/multi_dimensional/: mod.rs  online_gradient_descent.rs
soco/tests/algorithms/online/uni_dimensional/: lazy_capacity_provisioning.rs  memoryless.rs  mod.rs  probabilistic.rs  randomized.rs  randomly_biased_greedy.rs
soco/tests/convert/: mod.rs
soco/tests/streaming/: offline.rs  online.rs
soco_py/: Cargo.toml
soco_py/src/: lib.rs
(+20488 files in other folders)
