[package]
name = "bachelors-thesis"
version = "0.1.0"
authors = ["Jonas Hübotter <jonas.huebotter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
pathfinding = "0.1.13"
ordered-float = "2.1.1"
rand = "0.8.3"
rand_pcg = "0.3.0"
