[package]
name = "soco"
description = "Algorithms for Smoothed Online Convex Optimization"
version = "1.0.0"
authors = ["Jonas Hübotter <jonas.huebotter@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://jonhue.github.io/soco"
repository = "https://github.com/jonhue/soco"
readme="README.md"
keywords=["optimization", "convex", "science", "online"]
categories=["science"]

[package.metadata.docs.rs]
rustdoc-args = [
  "--html-in-header",
  "katex.html",
]

[lib]
name = "soco"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib", "rlib"]

[dependencies]
approx = "0.5.1"
backtrace = "0.3.64"
bacon-sci-1 = "0.11.0"
bincode = "1.3.3"
cached = "0.33.0"
derivative = "2.2.0"
finitediff = "0.1.4"
is_sorted = "0.1.1"
itertools = "0.10.3"
log = "0.4.14"
nalgebra = "0.30.1"
nlopt = "0.5.4"
noisy_float = "0.2.0"
num = "0.4.0"
pyo3 = { version = "0.16.0", features = ["extension-module"] }
pyo3-log = "0.4.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
rayon = "1.5.1"
serde = "1.0.136"
serde_derive = "1.0.136"
simple_logger = "2.1.0"
thiserror = "1.0.30"
