[package]
name = "rsdc"
description = "Implementation of Algorithms for Right-Sizing Data Centers"
version = "0.1.0"
authors = ["Jonas Hübotter <jonas.huebotter@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://jonhue.github.io/bachelors-thesis"
repository = "https://github.com/jonhue/bachelors-thesis"
exclude = [
    ".github/*",
    "dist/*",
    "scripts/*",
    "*.bib",
    "*.tex",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nlopt = "0.5.4"
pathfinding = "2.1.2"
ordered-float = "2.1.1"
rand = "0.8.3"
rand_pcg = "0.3.0"
