[package]
name = "soco"
description = "Algorithms for Smoothed Online Convex Optimization"
version = "0.1.0"
authors = ["Jonas Hübotter <jonas.huebotter@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://jonhue.github.io/bachelors-thesis"
repository = "https://github.com/jonhue/bachelors-thesis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bacon-sci = { git = "https://github.com/aftix/bacon", branch = "master" }
finitediff = "0.1.3"
itertools = "0.10.1"
nalgebra = "0.27.1"
nlopt = "0.5.4"
num = "0.4.0"
ordered-float = "2.5.1"
pathfinding = "2.1.5"
rand = "0.8.3"
rand_pcg = "0.3.0"
