[package]
name = "soco"
description = "Algorithms for Smoothed Online Convex Optimization"
version = "0.1.0"
authors = ["Jonas Hübotter <jonas.huebotter@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://jonhue.github.io/bachelors-thesis"
repository = "https://github.com/jonhue/bachelors-thesis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.0"
bacon-sci = { git = "https://github.com/aftix/bacon", branch = "master" }
crossbeam = "0.8.1"
derivative = "2.2.0"
finitediff = "0.1.4"
itertools = "0.10.1"
nalgebra = "0.28.0"
nlopt = "0.5.4"
noisy_float = "0.2.0"
num = "0.4.0"
rand = "0.8.4"
rand_pcg = "0.3.1"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
thiserror = "1.0.26"
