[package]
name = "soco"
description = "Algorithms for Smoothed Online Convex Optimization"
version = "0.1.0"
authors = ["Jonas Hübotter <jonas.huebotter@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://jonhue.github.io/bachelors-thesis"
repository = "https://github.com/jonhue/bachelors-thesis"

[lib]
name = "soco"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.14.1"
features = ["extension-module"]

[dependencies]
approx = "0.5.0"
backtrace = "0.3.61"
bacon-sci = { git = "https://github.com/aftix/bacon", branch = "master" }
bincode = "1.3.3"
cached = "0.23.0"
derivative = "2.2.0"
finitediff = "0.1.4"
is_sorted = "0.1.1"
itertools = "0.10.1"
log = "0.4.14"
nalgebra = "0.28.0"
nlopt = "0.5.4"
noisy_float = "0.2.0"
num = "0.4.0"
pyo3-log = "0.4.0"
rand = "0.8.4"
rand_pcg = "0.3.1"
rayon = "1.5.1"
serde = "1.0.126"
serde_derive = "1.0.126"
simple_logger = "1.12.0"
thiserror = "1.0.26"
