[package]
name = "soco_py"
description = "Python bindings for soco crate"
version = "0.1.0"
authors = ["Jonas Hübotter <jonas.huebotter@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://jonhue.github.io/bachelors-thesis"
repository = "https://github.com/jonhue/bachelors-thesis"

[lib]
name = "soco_py"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.14.1"
features = ["extension-module"]
